
package udorx_pbf;

//option optimize_for = LITE_RUNTIME;


// [START java_declaration]
option java_package = "com.mkr.models.proto";
option java_outer_classname = "CommPackets";
// [END java_declaration]

